<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/quiz"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlue"/>

    <TextView
        android:id="@+id/meilleur_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bouton_commencer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/meilleur_score_0"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bouton_commencer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/commencer" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        android:background="@color/colorBlue"/>

</RelativeLayout>